# snippet-compiler

./: .gitignore  Makefile  README.md  justfile  pyproject.toml  setup.py
.vim/: coc-settings.json
examples/: example-slides.md  main-template.cpp  snippet-compiler-markdown-render-README-example.md
snippetcompiler/: cli.py
src/snippetcompiler/: cli.py
testing/: example.md  simple.t  snippet_compiler_markdown_renderer.t  test_simplle.py
